refactoring code : edite roles and permissions